5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1643_2445.log
== TEST (2019-04-14 23:59:51) 
-- CODE:
tmp=  float(input("Sua temperatura esta em C ou F? "))
grs= float(input("Qual o valor da temperatura? "))
if (tmp == F):
	x= ((5 * (tmp - 32))/ 9)
else: 
	x= (((9 * tmp) + 32)/5)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tmp=  float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:00:48) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? "))
grs= float(input("Qual o valor da temperatura? "))
if (tmp == F):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (((9 * grs) + 32)/5)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 1
    tmp= input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:00:59) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == F):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (((9 * grs) + 32)/5)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (tmp == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:01:50) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == "F"):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (((9 * grs) + 32)/5)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:07:19) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == "F"):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (160 + ( 9 * grs)/ 5)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
736.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:07:44) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == "F"):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (160 + ( 9 * grs)/ 5)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
736.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:08:05) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == "F"):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (160 + ( 9 * grs)/ 5)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.171099
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
736.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:09:32) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == "F"):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (((9 * grs)/ 5) +32)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:09:53) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == "F"):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (((9 * grs)/ 5) +32)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:10:17) 
-- CODE:
tmp= input("Sua temperatura esta em C ou F? ")
grs= float(input("Qual o valor da temperatura? "))
if (tmp == "F"):
	x= ((5 * (grs - 32))/ 9)
else: 
	x= (((9 * grs)/ 5) +32)
print(round(x, 2))
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.146592
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
